# subtitle-webapp

./: .gitignore  LICENSE_MIT  README.md  index.html  package.json  project-architecture.drawio  tsconfig.app.json  vite.config.ts
envoy/: envoy.yaml
nginx/: nginx.conf
proto/: ChatServiceClientPb.ts  chat.proto  chat_pb.d.ts  chat_pb.js  package.json
public/: audio-translate-processor.js  audio-worklet.js
scripts/: start_script.js  update_script.js
src/: App.css  App.scss  App.tsx  host.ts  main.tsx  webapp-env.d.ts
src/assets/svg/: font-size-icon-01.tsx  language-icon-01.tsx  large-model-icon-01.tsx  layout-icon-01.tsx  like-icon-01.tsx  more-icon-01.tsx  speaker-icon-01.tsx  switch-room-icon-01.tsx  theme-icon-01.tsx
src/audio/: audio-recorder.ts  audio-service.ts
src/audio-worklet/processors/: audio-translate-processor.ts  audio-worklet-demo-processor.ts
src/audio/worker/: worker.ts
src/components/: audio-effect.css  audio-effect.tsx  audio-worklet-demo.tsx  realtime-translate.tsx
src/components/display-block/: display-block.scss  display-block.tsx
src/components/realtime-translate/: realtime-translate.scss  realtime-translate.tsx  subtitle-assist-ball.tsx  subtitle-item.tsx  subtitle-settings.tsx
src/components/realtime-translate/hooks/: use-chat-listen.tsx  use-join-room.tsx  use-start-recording.tsx
src/components/realtime-translate/join-room/: join-room.scss  join-room.tsx
src/contants/: language.ts  large-language-model.ts  subtitle-layout.ts
src/hooks/: use-chat-service-client.tsx
src/info/: subtitle-info.ts
src/log/: logging.ts
src/model/: subtitle-info.ts  subtitle.ts
src/models/: silero-vad-v5.ts
src/page/home-page/: home-page.tsx
src/route/: webapp-route.tsx
src/silero/: silero-vad-v5.ts
src/store/: config.ts  webapp-hook.ts  webapp-store.ts
src/store/features/: session-slice.ts  static-slice.ts
src/utils/: audio-utils.ts  string-utils.ts  style-util.ts
src/web-worker/workers/: worker-demo.ts
src/worker/: worker.ts
src/workers/hooks/: use-worker.tsx
src/worklet/: worklet.ts
ssl-certificate/: star_advantest_com.crt  star_advantest_com.key
subtitle-webapp-crate/: Cargo.toml
subtitle-webapp-crate/.cargo/: config.toml
subtitle-webapp-crate/src/: dependent_module.rs  js_sys_utils.rs  lib.rs  media_devices_utils.rs  utils.rs  wasm.rs  wasm_audio.rs  web_sys_utils.rs  worklet.js
subtitle-webapp-crate/src/utils/: devices_utils.rs  macro_utils.rs  web_sys_utils.rs
subtitle-webapp-crate/src/wasm/: audio_processor.rs
subtitle-webapp-rust-crate/: Cargo.toml
subtitle-webapp-rust-crate/src/: audio.rs  lib.rs  utils.rs  web_audio.rs
subtitle-webapp-rust-crate/src/utils/: web_sys_utils.rs
