[package]
authors = ["mengen.dai <mengen.dai@advantest.com>"]
name = "subtitle-webapp-crate"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.tokio]
version = "1.42"
features = [
    "rt",
    "sync"
]

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "console",
    "Navigator",
    "Worker",
    "Blob",
    "BlobEvent",
    "HtmlMediaElement",
    "AudioNode",
    "AnalyserNode",
    "AudioContext",
    "AudioBuffer",
    "AudioDestinationNode",
    "MediaStream",
    "MediaDevices",
    "MediaRecorder",
    "MediaDeviceInfo",
    "MediaRecorderOptions",
    "MediaStreamConstraints",
    "MediaStreamAudioSourceNode",
    "MediaStreamAudioSourceOptions"
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
