[package]
authors = ["mengen.dai <mengen.dai@advantest.com>"]
name = "subtitle-webapp-crate"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0.3.76"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.tokio]
version = "1.42"
features = [
    "sync",
]

[dependencies.web-sys]
version = "0.3.76"
features = [
    "Window",
    "console",
    "Navigator",
    "Worker",
    "Url",
    "Blob",
    "BlobEvent",
    "BlobPropertyBag",
    "HtmlMediaElement",
    "AudioNode",
    "AnalyserNode",
    "AudioBuffer",
    "AudioWorklet",
    "AudioContext",
    "AudioWorkletNode",
    "AudioDestinationNode",
    "AudioBufferSourceNode",
    "AudioWorkletNodeOptions",
    "OfflineAudioContext",
    "MediaStream",
    "MediaDevices",
    "MediaRecorder",
    "MediaDeviceInfo",
    "MediaRecorderOptions",
    "MediaStreamConstraints",
    "MediaStreamAudioSourceNode",
    "MediaStreamAudioSourceOptions"
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
